--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "src/index.ts",
   "main": "dist/main.js",
   "scripts": {
-    "dev": "parcel serve index.html",
+    "dev": "parcel serve index.html --no-cache",
     "watch": "parcel watch",
     "build": "parcel build"
   },
